# numerical_optimization

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CPPLINT.cfg  readme.md
bfgs/: CMakeLists.txt  main.cc  path_smoother_node.cc
bfgs/path_smoother/: CMakeLists.txt  path_smoother.cc  path_smoother.h
bfgs/visualizer/: CMakeLists.txt  map.cc  map.h  types.h
cmake/: CtestAddTest.cmake  CxxOptions.cmake
lsgd/: CMakeLists.txt  main.cc
math/: CMakeLists.txt  cubic_curve.h  cubic_spline.cc  cubic_spline.h  cubic_splines.h  interpolation.h
optimizer/: CMakeLists.txt  armijo_optimizer.cc  armijo_optimizer.h  lbfgs.cc  lbfgs.h  optimizer.cc  optimizer.h
scripts/: configure.sh  copyright.sh  format.sh  paint.py  static_check.sh  test.sh
